@startuml database-physical-user-mongodb
allowmixing

skinparam shadowing false
skinparam roundcorner 0
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 9
skinparam linetype ortho
skinparam classAttributeIconSize 0

skinparam entity {
  BackgroundColor #FEFECE
  BorderColor black
}
skinparam database {
  BackgroundColor #E8F4FC
  BorderColor black
}
skinparam note {
  BackgroundColor #FFFFCC
  BorderColor black
}

title Физическая модель — user-service, MongoDB (база health_tracker)

hide circle
hide methods

database "MongoDB\nhealth_tracker" as mg

entity "users (auth-service)\n<<external>>" as users_ext #DDDDDD {
  * **id** : UUID <<PK>>
}

entity "user_info" as ui {
  * **_id** : ObjectId <<PK>>
  --
  * user_id : UUID <<UK>>
  full_name : String
  age : Int
  weight : Double
  height : Int
  gender : String
  country : String
  smoker : Boolean
  alcohol : Boolean
  sports : Boolean
  chronic_diseases : Array<String>
  allergies : Array<String>
  predisposition : String
  medications_regular : Array<String>
  doctor_notes : String
  registered_at : DateTime
  updated_at : DateTime
}

entity "food_intakes" as fi {
  * **_id** : ObjectId <<PK>>
  --
  food_intake_id : UUID <<UK>>
  user_id : UUID
  food_name : String
  category : String
  amount : Double
  unit : String
  intake_time : DateTime
  created_at : DateTime
  components : Array<String>
}

entity "symptoms" as sy {
  * **_id** : ObjectId <<PK>>
  --
  symptoms_id : UUID <<UK>>
  user_id : UUID
  symptom_name : String
  severity : Int
  start_time : DateTime
  end_time : DateTime
}

entity "common_feelings" as cf {
  * **_id** : ObjectId <<PK>>
  --
  feeling_id : UUID
  user_id : UUID
  date_time : DateTime
  wellbeing_score : Int
}

entity "notes" as no {
  * **_id** : ObjectId <<PK>>
  --
  note_id : UUID
  user_id : UUID
  content : String
  date : DateTime
}

mg .. ui
mg .. fi
mg .. sy
mg .. cf
mg .. no

users_ext ||..|| ui : "user_id (1:1)"
users_ext ||..o{ fi : user_id
users_ext ||..o{ sy : user_id
users_ext ||..o{ cf : user_id
users_ext ||..o{ no : user_id

note bottom of ui
  Индексы: { userId: 1 } unique,
  { fullName: 1 }, { registeredAt: -1 }
end note

note bottom of fi
  Индексы: { userId, intakeTime },
  { foodName: 1 }, { intakeTime: -1 }.
  Источник для FoodAnalyzer и отчётов.
end note

note bottom of sy
  Индексы: { userId, startTime },
  { symptomName: 1 }, { severity: 1 }.
  Дневник симптомов (/api/feelings/symptoms).
end note

note bottom of cf
  Индексы: { userId, dateTime },
  { wellbeingScore: 1 }.
end note

note as N_NO_FA #FFFFCC
  Коллекции **food_analysis** нет.
  Пищевой анализатор строит связи
  «продукт — симптом» на лету из
  food_intakes и symptoms.
end note

@enduml
